# mindshow

./: .gitignore  CLAUDE.md  CURRENT_STATUS.md  INTEGRATED_SYSTEM_README.md  PIXELBLAZE_ASYNC_RESEARCH.md  PIXELBLAZE_READY_TO_TEST.md  PIXELBLAZE_RESEARCH_DOCUMENTATION.md  PROJECT_OVERVIEW.md  README.md  REPOSITORY_NAVIGATION.md  TODO_STARTUP_SHUTDOWN.md  activate_sparkfire_direct.py  ble_scanner.py  clean_disconnect.py  clean_web_dashboard.py  config.py  debug_brainwave.py  debug_dashboard.html  debug_eeg_data.py  find_muse_simple.py  fix_brainflow_pi.sh  fix_pi_bluetooth.sh  install_muselsl_minimal.sh  install_muselsl_pi.sh  integrated_mindshow_system.py  pi_zero_setup.sh  pixelblaze_integration.py  pixelblaze_integration_final.py  pixelblaze_integration_gui_native.py  pixelblaze_integration_native.py  pixelblaze_integration_working.py  pyproject.toml  real_brainwave_dashboard.py  requirements.txt  scan_all_ble.py  setup.sh  simple_brainwave.py  simple_real_dashboard.py  stable_unified_system.py  start.sh  (+34 more)
Old/: data_monitor.py  discover_patterns.py  eeg_visualizer.py  follow_guide_exactly.py  list_and_select_patterns.py  parse_pattern_list.py  work_with_existing_patterns.py
Patterns/: liquid_color_flow.js  liquid_color_smooth.js  liquid_color_stable.js  phase4b_example_pattern.js  rainbow_melt_pure_red.js  rainbow_melt_red_blend.js  rainbow_melt_red_compress.js  rainbow_melt_red_slider.js  smooth_breathing_glow.js  smooth_color_waves.js  test_intensity.js
config/: config.py.backup  config_brainflow.py  requirements.txt
deep_research/: README.md  (+7 more)
docs/: README.md  (+8 more)
(+31 files in other folders)
